fix: mobile viewport had wrong size

--- a/template/static/style.css
+++ b/template/static/style.css
@@ -40,6 +40,10 @@ html {
   scroll-behavior: smooth;
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   color: var(--text);
